# gong-cli

./: .gitignore  AGENTS.md  CONTEXT.md  Cargo.toml  README.md  RUST_CLI_TOOLS_BEST_PRACTICES_GUIDE.md  dist-workspace.toml
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
docs/: PRD.md
docs/adr/: 0001-stateless-sync-via-output-directory.md  0002-call-identity-and-legacy-re-render.md  0003-sync-scope-excludes-only-all-internal-calls.md  0004-canonical-call-file-format.md
sample/: get_call_transcript.sh
scripts/: sanitize_fixtures.py
src/: api.rs  cli.rs  config.rs  lib.rs  main.rs  renderer.rs  sync.rs
src/commands/: check.rs  get.rs  list.rs  mod.rs  sync.rs
tests/: api_types.rs  check_cli.rs  fixtures_contract.rs  get_cli.rs  list_cli.rs  renderer.rs  sync_cli.rs
tests/fixtures/: README.md  extensive_response.json  january_response.json  retention_response.json  transcript_response.json
tests/snapshots/: renderer__missing_account.snap  renderer__missing_spotlight.snap  renderer__reference_call.snap  renderer__unknown_phone_party.snap
